--- a/ansible-cookbooks/configuration/playbook.yml
+++ b/ansible-cookbooks/configuration/playbook.yml
@@ -23,3 +23,4 @@
     - name: 'Add insecure access to docker registry'
       shell: |
         echo '{"insecure-registries" : ["{{ hostvars[registry]['ansible_default_ipv4']['address'] }}:5000"]}' >> /etc/docker/daemon.json
+        service docker restart
