--- a/inventory.ini
+++ b/inventory.ini
@@ -2,26 +2,26 @@
 #-----------------------------------------------------Start POSTGRES &  ETCD-------------------------------------------------------------------
 # etcd configuration
 [etcd_cluster]  # recommendation: 3 or 5-7 nodes
-192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+15.206.179.150 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
+65.2.74.110 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
+13.234.31.193 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
 
 
 # Postgres  configuration
 # if with_haproxy_load_balancing: true (in vars/main.yml)
 [balancers]
-192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+15.206.179.150 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
+65.2.74.110 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
+13.234.31.193 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
 
 
 # PostgreSQL nodes
 [master]
-192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+15.206.179.150 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [replica]
-192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
-192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+13.234.31.193 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+65.2.74.110 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [postgres_cluster:children]
 master
@@ -36,9 +36,9 @@ postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en
 
 ; #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
 [kafka-nodes]
-13.126.228.46 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.4
-52.66.189.108 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.6
-13.233.166.182 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.11
+3.111.41.194 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.4
+13.235.73.88 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.6
+3.110.189.138 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.11
 
 [kafka-nodes:vars]
 kafka_zookeeper_connect='localhost:2181'
@@ -46,18 +46,18 @@ kafka_zookeeper_connect='localhost:2181'
 
 ; #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
 [kube_control_plane]
-192.168.0.8 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.8 ip=192.168.0.8 access_ip=192.168.0.8
+13.235.77.113 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu  ansible_host=13.235.77.113 ip=13.235.77.113 access_ip=13.235.77.113
 
 
 [etcd]
-192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
-192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.14 ip=192.168.0.14 access_ip=192.168.0.14
-192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.12 ip=192.168.0.12 access_ip=192.168.0.12
+15.207.254.234 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu  ansible_host=15.207.254.234 ip=15.207.254.234 access_ip=15.207.254.234
+15.207.247.135 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu  ansible_host=15.207.247.135 ip=15.207.247.135 access_ip=15.207.247.135
+13.233.104.45 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu  ansible_host=13.233.104.45 ip=13.233.104.45 access_ip=13.233.104.45
 
 [kube_node]
-192.168.0.14 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.14 ip=192.168.0.14 access_ip=192.168.0.14
-192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.12 ip=192.168.0.12 access_ip=192.168.0.12
-192.168.0.7 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.7 ip=192.168.0.7 access_ip=192.168.0.7
+15.207.247.135 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu  ansible_host=15.207.247.135 ip=15.207.247.135 access_ip=15.207.247.135
+13.233.104.45 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu  ansible_host=13.233.104.45 ip=13.233.104.45 access_ip=13.233.104.45
+15.207.254.234 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu  ansible_host=15.207.254.234 ip=15.207.254.234 access_ip=15.207.254.234
 
 [calico_rr]
 
@@ -70,27 +70,27 @@ calico_rr
 
 #-----------------------------------------------------START ELASTICSEARCH-------------------------------------------------------------------
 [elasticsearch]
-192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.13 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
 #-----------------------------------------------------END ELASTICSEARCH-------------------------------------------------------------------
 
 #-----------------------------------------------------START REDIS-------------------------------------------------------------------
 [redis-master]
-192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+15.207.112.100 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
 
 [redis-slave]
-192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+3.108.254.29 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
 
 [redis-slave:vars]
-master_node_ip="192.168.0.10"
+master_node_ip="15.207.112.100"
 #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
 #-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
 [registry]
-192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
+65.2.63.206 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
 #-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START CLICKHOUSE-------------------------------------------------------------------
 ; [clickhouse_cluster]
-; 192.168.0.26 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+; 192.168.0.26 ansible_ssh_private_key_file=./divoc_installer_test.pem ansible_ssh_user=ubuntu
 ; #-----------------------------------------------------END CLICKHOUSE-------------------------------------------------------------------
 
