--- a/kube-deployment-config/certificate-api-service.yaml
+++ b/kube-deployment-config/certificate-api-service.yaml
@@ -16,6 +16,4 @@ spec:
   selector:
     k8s-app: certificate-api
   sessionAffinity: None
-  type: LoadBalancer
-status:
-  loadBalancer: {}
+  type: ClusterIP
