--- a/kube-deployment-config/test-certificate-signer-service.yaml
+++ b/kube-deployment-config/test-certificate-signer-service.yaml
@@ -11,6 +11,4 @@ spec:
   selector:
     k8s-app: test-certificate-signer
   sessionAffinity: None
-  type: LoadBalancer
-status:
-  loadBalancer: {}
+  type: ClusterIP
