--- a/inventory.ini
+++ b/inventory.ini
@@ -2,26 +2,26 @@
 #-----------------------------------------------------Start POSTGRES &  ETCD-------------------------------------------------------------------
 # etcd configuration
 [etcd_cluster]  # recommendation: 3 or 5-7 nodes
-192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.24 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # Postgres  configuration
 # if with_haproxy_load_balancing: true (in vars/main.yml)
 [balancers]
-192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
-192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.24 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 
 # PostgreSQL nodes
 [master]
-192.168.0.21 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [replica]
-192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
-192.168.0.27 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.24 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
+192.168.0.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu postgresql_exists='false'
 
 [postgres_cluster:children]
 master
@@ -36,9 +36,9 @@ postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en
 
 ; #-----------------------------------------------------START KAFKA & ZOOKEEPER-------------------------------------------------------------------
 [kafka-nodes]
-13.126.228.46 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.4
-52.66.189.108 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.6
-13.233.166.182 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.11
+13.232.73.28 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=1 adv_ip=192.168.0.7
+13.234.114.141 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=2 adv_ip=192.168.0.9
+13.127.179.115 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.14
 
 [kafka-nodes:vars]
 kafka_zookeeper_connect='localhost:2181'
@@ -46,18 +46,16 @@ kafka_zookeeper_connect='localhost:2181'
 
 ; #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
 [kube_control_plane]
-192.168.0.20 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.20 ip=192.168.0.20 access_ip=192.168.0.20
+192.168.0.23 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.23 ip=192.168.0.23 access_ip=192.168.0.23
 
 
 [etcd]
-192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.30 ip=192.168.0.30 access_ip=192.168.0.30
-192.168.0.29 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.29 ip=192.168.0.29 access_ip=192.168.0.29
-192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.25 ip=192.168.0.25access_ip=192.168.0.25
+192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.12 ip=192.168.0.12 access_ip=192.168.0.12
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.4 ip=192.168.0.4 access_ip=192.168.0.4
 
 [kube_node]
-192.168.0.29 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.29 ip=192.168.0.29 access_ip=192.168.0.29
-192.168.0.25 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.25 ip=192.168.0.25 access_ip=192.168.0.25
-192.168.0.30 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.30 ip=192.168.0.30 access_ip=192.168.0.30
+192.168.0.4 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.4 ip=192.168.0.4 access_ip=192.168.0.4
+192.168.0.12 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu  ansible_host=192.168.0.12 ip=192.168.0.12 access_ip=192.168.0.12
 
 [calico_rr]
 
@@ -69,24 +67,24 @@ calico_rr
 #-----------------------------------------------------END KUBERNETES-------------------------------------------------------------------
 
 #-----------------------------------------------------START ELASTICSEARCH-------------------------------------------------------------------
-[elasticsearch]
-192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+; [elasticsearch]
+; 192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 #-----------------------------------------------------END ELASTICSEARCH-------------------------------------------------------------------
 
 #-----------------------------------------------------START REDIS-------------------------------------------------------------------
 [redis-master]
-192.168.0.10 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.22 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 [redis-slave]
-192.168.0.13 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
+192.168.0.29 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu
 
 [redis-slave:vars]
-master_node_ip="192.168.0.10"
+master_node_ip="192.168.0.22"
 #-----------------------------------------------------END REDIS-------------------------------------------------------------------
 
 #-----------------------------------------------------START DOCKER-REGISTRY-------------------------------------------------------------------
 [registry]
-192.168.0.5 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
+192.168.0.6 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu DOCKER_REGISTRY_USER=test DOCKER_REGISTRY_PASSWORD=testpassword
 #-----------------------------------------------------END DOCKER-REGISTRY-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START CLICKHOUSE-------------------------------------------------------------------
