--- a/kube-deployment-config/vaccination-api-deployment.yaml
+++ b/kube-deployment-config/vaccination-api-deployment.yaml
@@ -4,15 +4,15 @@ metadata:
   annotations:
     deployment.kubernetes.io/revision: "4"
   labels:
-    k8s-app: vaccination-api
-  name: vaccination-api
+    k8s-app: vaccination_api
+  name: vaccination_api
 spec:
   progressDeadlineSeconds: 600
   replicas: 1
   revisionHistoryLimit: 10
   selector:
     matchLabels:
-      k8s-app: vaccination-api
+      k8s-app: vaccination_api
   strategy:
     rollingUpdate:
       maxSurge: 25%
@@ -21,8 +21,8 @@ spec:
   template:
     metadata:
       labels:
-        k8s-app: vaccination-api
-      name: vaccination-api
+        k8s-app: vaccination_api
+      name: vaccination_api
     spec:
       containers:
         - image: dockerhub/vaccination_api:latest
@@ -30,7 +30,7 @@ spec:
           envFrom:
             - configMapRef:
                 name: divoc-config
-          name: vaccination-api
+          name: vaccination_api
           livenessProbe:
             tcpSocket:
               port: 8000
