--- a/kube-deployment-config/certificate-signer-deployment.yaml
+++ b/kube-deployment-config/certificate-signer-deployment.yaml
@@ -2,23 +2,23 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    k8s-app: certificate-signer
-  name: certificate-signer
+    k8s-app: certificate_signer
+  name: certificate_signer
 spec:
   replicas: 1 
   selector:
     matchLabels:
-      k8s-app: certificate-signer
+      k8s-app: certificate_signer
   strategy: {}
   template:
     metadata:
       labels:
-        k8s-app: certificate-signer
+        k8s-app: certificate_signer
     spec:
       containers:
         - image: dockerhub/certificate_signer:latest
           imagePullPolicy: Always
-          name: certificate-signer
+          name: certificate_signer
           envFrom:
             - configMapRef:
                 name: divoc-config
