--- a/kube-deployment-config/digilocker-support-api-hsp.yaml
+++ b/kube-deployment-config/digilocker-support-api-hsp.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: digilocker-support-api
+  name: digilocker_support_api
   namespace: divoc
 spec:
   maxReplicas: 5
@@ -9,5 +9,5 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: digilocker-support-api
+    name: digilocker_support_api
   targetCPUUtilizationPercentage: 70
