--- a/kube-deployment-config/keycloak-hsp.yml
+++ b/kube-deployment-config/keycloak-hsp.yml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: keycloak-service
+  name: keycloak
   namespace: divoc
 spec:
   maxReplicas: 50
@@ -9,5 +9,5 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: keycloak-service
+    name: keycloak
   targetCPUUtilizationPercentage: 70
