--- a/kube-deployment-config/vaccination-api-hsp.yml
+++ b/kube-deployment-config/vaccination-api-hsp.yml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: vaccination-api
+  name: vaccination_api
   namespace: divoc
 spec:
   maxReplicas: 5
@@ -9,5 +9,5 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: vaccination-api
+    name: vaccination_api
   targetCPUUtilizationPercentage: 70
