--- a/kube-deployment-config/analytics-feed-deployment.yaml
+++ b/kube-deployment-config/analytics-feed-deployment.yaml
@@ -2,23 +2,23 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    k8s-app: analytics_feed
-  name: analytics_feed
+    k8s-app: analytics-feed
+  name: analytics-feed
 spec:
   replicas: 1 
   selector:
     matchLabels:
-      k8s-app: analytics_feed
+      k8s-app: analytics-feed
   strategy: {}
   template:
     metadata:
       labels:
-        k8s-app: analytics_feed
+        k8s-app: analytics-feed
     spec:
       containers:
         - image: dockerhub/analytics_feed:latest
           imagePullPolicy: Always
-          name: analytics_feed
+          name: analytics-feed
           envFrom:
             - configMapRef:
                 name: divoc-config
