--- a/kube-deployment-config/certificate-processor-hsp.yaml
+++ b/kube-deployment-config/certificate-processor-hsp.yaml
@@ -1,7 +1,7 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: certificate_processor
+  name: certificate-processor
   namespace: divoc
 spec:
   maxReplicas: 5
@@ -9,5 +9,5 @@ spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: certificate_processor
+    name: certificate-processor
   targetCPUUtilizationPercentage: 70
