--- a/kube-deployment-config/digilocker-support-api-deployment.yaml
+++ b/kube-deployment-config/digilocker-support-api-deployment.yaml
@@ -2,23 +2,23 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    k8s-app: digilocker_support_api
-  name: digilocker_support_api
+    k8s-app: digilocker-support-api
+  name: digilocker-support-api
 spec:
   replicas: 1
   selector:
     matchLabels:
-      k8s-app: digilocker_support_api
+      k8s-app: digilocker-support-api
   strategy: {}
   template:
     metadata:
       labels:
-        k8s-app: digilocker_support_api
+        k8s-app: digilocker-support-api
     spec:
       containers:
         - image: dockerhub/digilocker_support_api:latest
           imagePullPolicy: Always
-          name: digilocker_support_api
+          name: digilocker-support-api
           envFrom:
             - configMapRef:
                 name: divoc-config
