kafka and zookeeper

--- a/inventory.ini
+++ b/inventory.ini
@@ -41,7 +41,7 @@ postgresql_databases="[{db: 'registry', encoding: 'en_US.UTF-8', lc_collate: 'en
 13.127.179.115 ansible_ssh_private_key_file=./divoc-installer.pem ansible_ssh_user=ubuntu broker_id=3 adv_ip=192.168.0.14
 
 [kafka-nodes:vars]
-kafka_zookeeper_connect='localhost:2181'
+zookeeper_hosts="[192.168.0.7,192.168.0.9,192.168.0.14]"
 ; #-----------------------------------------------------END KAFKA & ZOOKEEPER-------------------------------------------------------------------
 
 ; #-----------------------------------------------------START KUBERNETES-------------------------------------------------------------------
