--- a/ansible-cookbooks/kafka-zookeeper/kafka_and_zookeeper.yml
+++ b/ansible-cookbooks/kafka-zookeeper/kafka_and_zookeeper.yml
@@ -8,6 +8,7 @@
   become: true
   roles:
     - role: zookeeper
+      sansible_kafka_zookeeper_hosts: {{zookeeper_hosts}}
 
 - name: Install kafka
   hosts: kafka-nodes
@@ -16,4 +17,5 @@
     - role: kafka
       sansible_kafka_listen_address: "{{ ansible_default_ipv4.address }}"
       sansible_kafka_advertised_host_name: "{{ ansible_default_ipv4.address }}"
+      sansible_kafka_zookeeper_hosts: {{ zookeeper_hosts }}
 
