--- a/kube-deployment-config/public-app-deployment.yaml
+++ b/kube-deployment-config/public-app-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         k8s-app: public-app
     spec:
       containers:
-        - image: 192.168.0.6:5000/nginx:latest
+        - image: REGISTRY:5000/nginx:latest
           imagePullPolicy: Always
           name: public-app
           envFrom:
