--- a/kube-deployment-config/monitoring/prometheus-pvc-nfs.yaml
+++ b/kube-deployment-config/monitoring/prometheus-pvc-nfs.yaml
@@ -7,9 +7,9 @@ metadata:
   labels:
     app: prometheus-deployment
 spec:
-  storageClassName: managed-nfs
+  storageClassName: manual
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 500Mi
