--- a/kube-deployment-config/test-certificate-signer-deployment.yaml
+++ b/kube-deployment-config/test-certificate-signer-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         k8s-app: test-certificate-signer
     spec:
       containers:
-        - image: dockerhub/test_certificate_signer:latest
+        - image: dockerhub/test_certificate_signer:1.24.0-generic
           imagePullPolicy: Always
           resources:
             requests:
